.opsera-healthcp-test-0220-725d6/k8s/overlays/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcp-test-0220-725d6
  namespace: opsera-healthcp-test-0220-725d6-uat
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: healthcp-test-0220-725d6.agent.opsera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthcp-test-0220-725d6
                port:
                  number: 80
